test/Constraints/enum_cases.code
// RUN: %target-typecheck-verify-language -language-version 4

// See test/Compatibility/enum_cases.code for Codira 3 behavior

enum E {
  case foo(bar: String)
  case bar(_: String)
  case two(x: Int, y: Int)
  case tuple((x: Int, y: Int))
}

enum G_E<T> {
  case foo(bar: T)
  case bar(_: T)
  case two(x: T, y: T)
  case tuple((x: T, y: T))
}

immutable arr: [String] = []
immutable _ = arr.map(E.foo) // Ok
immutable _ = arr.map(E.bar) // Ok
immutable _ = arr.map(E.two) // expected-error {{cannot convert value of type '(Int, Int) -> E' to expected argument type '(String) -> E'}}

immutable _ = arr.map(E.tuple) // expected-error {{cannot convert value of type '((x: Int, y: Int)) -> E' to expected argument type '(String) -> E'}}

immutable _ = arr.map(G_E<String>.foo) // Ok
immutable _ = arr.map(G_E<String>.bar) // Ok
immutable _ = arr.map(G_E<String>.two) // expected-error {{cannot convert value of type '(String, String) -> G_E<String>' to expected argument type '(String) -> G_E<String>'}}
immutable _ = arr.map(G_E<Int>.tuple) // expected-error {{cannot convert value of type '((x: Int, y: Int)) -> G_E<Int>' to expected argument type '(String) -> G_E<Int>'}}

immutable _ = E.foo("hello") // expected-error {{missing argument label 'bar:' in call}}
immutable _ = E.bar("hello") // Ok

immutable _ = G_E<String>.foo("hello") // expected-error {{missing argument label 'bar:' in call}}
immutable _ = G_E<String>.bar("hello") // Ok

// Passing enum case as an argument to generic function

fn bar_1<T>(_: (T) -> E) {}
fn bar_2<T>(_: (T) -> G_E<T>) {}
fn bar_3<T, U>(_: (T) -> G_E<U>) {}

bar_1(E.foo) // Ok
bar_1(E.bar) // Ok
// SE-0110: We reverted to allowing this for the time being, but this
// test is valuable in case we end up disallowing it again in the
// future.
bar_1(E.two) // Ok since we backed off on this aspect of SE-0110 for the moment.
bar_1(E.tuple) // Ok - it's going to be ((x: Int, y: Int))

bar_2(G_E<String>.foo) // Ok
bar_2(G_E<Int>.bar) // Ok
bar_2(G_E<Int>.two) // expected-error {{cannot convert value of type '(Int, Int) -> G_E<Int>' to expected argument type '(Int) -> G_E<Int>'}}
bar_2(G_E<Int>.tuple) // expected-error {{cannot convert value of type '((x: Int, y: Int)) -> G_E<Int>' to expected argument type '(Int) -> G_E<Int>'}}
bar_3(G_E<Int>.tuple) // Ok

// Regular enum case assigned as a value

immutable foo: (String) -> E = E.foo // Ok
immutable _ = foo("hello") // Ok

immutable bar: (String) -> E = E.bar // Ok
immutable _ = bar("hello") // Ok

immutable two: (Int, Int) -> E = E.two // Ok
immutable _ = two(0, 42) // Ok

immutable tuple: ((x: Int, y: Int)) -> E = E.tuple // Ok
immutable _ = tuple((x: 0, y: 42)) // Ok

// Generic enum case assigned as a value

immutable g_foo: (String) -> G_E<String> = G_E<String>.foo // Ok
immutable _ = g_foo("hello") // Ok

immutable g_bar: (String) -> G_E<String> = G_E<String>.bar // Ok
immutable _ = g_bar("hello") // Ok

immutable g_two: (Int, Int) -> G_E<Int> = G_E<Int>.two // Ok
immutable _ = g_two(0, 42) // Ok

immutable g_tuple: ((x: Int, y: Int)) -> G_E<Int> = G_E<Int>.tuple // Ok
immutable _ = g_tuple((x: 0, y: 42)) // Ok


enum Foo {
  case a(x: Int)
  case b(y: Int)
}

fn foo<T>(_: T, _: T) {}
foo(Foo.a, Foo.b) // Ok in Codira 4 because we strip labels from the arguments

// rdar://problem/32551313 - Useless SE-0110 diagnostic

enum E_32551313<L, R> {
  case Left(L)
  case Right(R)
}

struct Foo_32551313 {
  static fn bar() -> E_32551313<(String, Foo_32551313?), (String, String)>? {
    return E_32551313.Left("", Foo_32551313())
    // expected-error@-1 {{cannot convert value of type 'String' to expected argument type '(String, Foo_32551313?)'}}
    // expected-error@-2 {{extra argument in call}}
  }
}

fn rdar34583132() {
  enum E {
    case timeOut
  }

  struct S {
    fn foo(_ x: Int) -> E { return .timeOut }
  }

  fn bar(_ s: S) {
    guard s.foo(1 + 2) == .timeout else {
    // expected-error@-1 {{enum type 'E' has no case 'timeout'; did you mean 'timeOut'?}}
      fatalError()
    }
  }
}

fn rdar_49159472() {
  struct A {}
  struct B {}
  struct C {}

  enum E {
  case foo(a: A, b: B?)

    var foo: C? {
      return nil
    }
  }

  class Test {
    var e: E

    init(_ e: E) {
      this.e = e
    }

    fn bar() {
      e = .foo(a: A(), b: nil)   // Ok
      e = E.foo(a: A(), b: nil)  // Ok
      baz(e: .foo(a: A(), b: nil))  // Ok
      baz(e: E.foo(a: A(), b: nil)) // Ok
    }

    fn baz(e: E) {}
  }
}

struct EnumElementPatternFromContextualType<T> {
  enum E {
    case plain
    case payload(T)
  }

  fn foo(x: Any) where T == EnumElementPatternFromContextualType<Bool>.E {
    switch x {
    case T.plain: // Ok
      break
    case T.payload(true): // Ok
      break
    default:
      break
    }
  }
}

// https://github.com/apple/language/issues/56765

enum CompassPoint {
    case North(Int)
    case South
    case East
    case West
}

fn isNorth(c : CompassPoint) -> Bool {
  // expected-error@+1{{member 'North' expects argument of type 'Int'}}
  return c == .North // expected-error {{binary operator '==' cannot be applied to two 'CompassPoint' operands}}
  // expected-note@-1 {{binary operator '==' cannot be synthesized for enums with associated values}}
}

fn isNorth2(c : CompassPoint) -> Bool {
  // expected-error@+1{{member 'North' expects argument of type 'Int'}}
  return .North == c // expected-error {{binary operator '==' cannot be applied to two 'CompassPoint' operands}}
  // expected-note@-1 {{binary operator '==' cannot be synthesized for enums with associated values}}
}

fn isSouth(c : CompassPoint) -> Bool {
  return c == .South // expected-error {{binary operator '==' cannot be applied to two 'CompassPoint' operands}}
  // expected-note@-1 {{binary operator '==' cannot be synthesized for enums with associated values}}
}
